Many changes to complete integration of notification engine.

--- a/src/environments/environment.ci.properties
+++ b/src/environments/environment.ci.properties
@@ -3,7 +3,6 @@
 # http://c12545-2:8080/pgadmissions
 # http://pgadmissions-sit.zuehlke.com/pgadmissions
 # =============================================================================
-
 application.host=http://pgadmissions-sit.zuehlke.com
 
 # -----------------------------------------------------------------------------
@@ -40,51 +39,70 @@ email.tobe=ked@zuhlke.com
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
-# The location where the indexes should be stored
 # -----------------------------------------------------------------------------
-hibernate.search.default.indexBase=pgadmissions-ci-indexes/
-hibernate.search.default.buildIndexOnStartup=false
+hibernate.search.default.indexBase=C:/prismIndexes/
 
 # -----------------------------------------------------------------------------
-# EMAIL SCHEDULERS & TIMINGS
+# START-UP
 # -----------------------------------------------------------------------------
-maintenance.daily=0 0 1 * * *
-maintenance.ongoing=0 */5 * * * *
+startup.hibernate.search.buildIndex=false
+startup.workflow.initialize=true
+startup.workflow.initialize.notifications=true
+startup.institutionDomicile.import=false
+startup.advertCategory.import=false
 
 # -----------------------------------------------------------------------------
-# PORTICO INTEGRATION SETTINGS
+# SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
-xml.data.import.cron=0 0 4 * * *
-xml.data.import.onstartup=false
-xml.data.import.user=reference
-xml.data.import.password=wiI2+sZm
-xml.data.import.prismProgrammes.user=prism
-xml.data.import.prismProgrammes.password=tCP5++Vm
-xml.data.import.countriesOfBirth.url=https://swiss-t.adcom.ucl.ac.uk/studentrefdata/reference/countriesOfBirth.xml
-xml.data.import.countriesOfDomicile.url=https://swiss-t.adcom.ucl.ac.uk/studentrefdata/reference/countriesOfDomicile.xml
-xml.data.import.disabilities.url=https://swiss-t.adcom.ucl.ac.uk/studentrefdata/reference/disabilities.xml
-xml.data.import.ethnicities.url=https://swiss-t.adcom.ucl.ac.uk/studentrefdata/reference/ethnicities.xml
-xml.data.import.institutions.url=https://swiss-t.adcom.ucl.ac.uk/studentrefdata/reference/institutions.xml
-xml.data.import.nationalities.url=https://swiss-t.adcom.ucl.ac.uk/studentrefdata/reference/nationalities.xml
-xml.data.import.prismProgrammes.url=https://swiss-t.adcom.ucl.ac.uk/studentrefdata/reference/prism/prismProgrammes.xml
-xml.data.import.qualifications.url=https://swiss-t.adcom.ucl.ac.uk/studentrefdata/reference/qualifications.xml
-xml.data.import.sourcesOfInterest.url=https://swiss-t.adcom.ucl.ac.uk/studentrefdata/reference/sourcesOfInterest.xml
+import.institutionDomicile.location=xml/iso/iso_country_codes.xml
+import.advertCategory.location=xml/opportunityCategories/soc2010.csv
 
-xml.data.export.webservice.url=https://swiss-t.adcom.ucl.ac.uk:4445/registryws/
-xml.data.export.webservice.keystore=classpath:/keystore/pgadmissions.jks
+# -----------------------------------------------------------------------------
+# SCHEDULERS & TIMINGS
+# -----------------------------------------------------------------------------
+maintenance.ongoing=0 */1 * * * *
+
+# -----------------------------------------------------------------------------
+# RESOURCE LIST DISPLAY SETTINGS
+# -----------------------------------------------------------------------------
+resource.list.sql.location
+resource.list.years.to.retrieve = 2
+resource.list.records.to.retrieve = 50
+
+# -----------------------------------------------------------------------------
+# EXPORT SETTINGS
+# -----------------------------------------------------------------------------
+xml.export.not.provided=Not provided
+xml.export.ip.not.provided=127.0.0.1
+xml.export.telephone.not.provided=+44 (0) 0000 000 000
+xml.export.other.provided=OTHER
+xml.export.refer.to.document=Refer to attached document.
+xml.export.source=PRISM
+
+xml.data.export.webservice.url=http://localhost:8088/mockService
 xml.data.export.webservice.keystorePassword=pgadmissions
 xml.data.export.webservice.consecutiveSoapFaultsLimit=5
 
 xml.data.export.queue_pausing_delay_in_case_of_network_problem=15
-xml.data.export.sftp.host=xfer-prism.ucl.ac.uk
+xml.data.export.sftp.host=192.168.11.115
 xml.data.export.sftp.port=22
-xml.data.export.sftp.username=prismd
-xml.data.export.sftp.password=
+xml.data.export.sftp.username=pgadmin
+xml.data.export.sftp.password=pg@m1ss1on
 xml.data.export.sftp.privatekeyfile=classpath:/sshKeys/id_rsa
 xml.data.export.sftp.folder=
 
 # -----------------------------------------------------------------------------
+# SYSTEM STARTUP SETTINGS
+# -----------------------------------------------------------------------------
+system.name=PRiSM
+system.user.firstName=UCL
+system.user.lastName=PRiSM
+system.user.email=prism@ucl.ac.uk
+
+system.default.email.subject.directory=email/subject/
+system.default.email.content.directory=email/content/
+
+# -----------------------------------------------------------------------------
 # SERIALIZATION SETTINGS
 # -----------------------------------------------------------------------------
-
 json.pretty.print=true
