--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -2,7 +2,6 @@
 # UCL Postgraduate Admissions (PRODUCTION)
 # http://prism.ucl.ac.uk/pgadmissions/
 # =============================================================================
-
 application.host=http://prism.ucl.ac.uk
 
 # -----------------------------------------------------------------------------
@@ -39,58 +38,45 @@ email.tobe=prism@ucl.ac.uk
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
-# The location where the indexes should be stored
 # -----------------------------------------------------------------------------
-hibernate.search.default.indexBase=/usr/local/jboss/pgadmissions-indexes/
+hibernate.search.default.indexBase=C:/prismIndexes/
 
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=true
-startup.workflow.initialize.notifications=false
+startup.workflow.initialize.notifications=true
 startup.institutionDomicile.import=false
 startup.advertCategory.import=false
 
 # -----------------------------------------------------------------------------
-# SYSTEM-DATA-IMPORT
+# SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
 import.institutionDomicile.location=xml/iso/iso_country_codes.xml
 import.advertCategory.location=xml/opportunityCategories/soc2010.csv
 
 # -----------------------------------------------------------------------------
-# SYSTEM-DATA-EXPORT
+# SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
-export.not.provided=Not provided
-export.ip.not.provided=127.0.0.1
-export.telephone.not.provided=+44 (0) 0000 000 000
-export.other.provided=OTHER
-export.refer.to.document=Refer to attached document.
-export.source=PRISM
+maintenance.ongoing=0 */1 * * * *
 
 # -----------------------------------------------------------------------------
-# EMAIL SCHEDULERS & TIMINGS
+# RESOURCE LIST DISPLAY SETTINGS
 # -----------------------------------------------------------------------------
-maintenance.daily=0 0 1 * * *
-maintenance.ongoing=0 */5 * * * *
+resource.list.sql.location
+resource.list.years.to.retrieve = 2
+resource.list.records.to.retrieve = 50
 
 # -----------------------------------------------------------------------------
-# PORTICO INTEGRATION SETTINGS
+# EXPORT SETTINGS
 # -----------------------------------------------------------------------------
-xml.data.import.cron=0 0 4 * * *
-xml.data.import.user=reference
-xml.data.import.password=wiI2+sZm
-xml.data.import.prismProgrammes.user=prism
-xml.data.import.prismProgrammes.password=tCP5++Vm
-xml.data.import.countriesOfBirth.url=https://swiss.adcom.ucl.ac.uk/studentrefdata/reference/countriesOfBirth.xml
-xml.data.import.countriesOfDomicile.url=https://swiss.adcom.ucl.ac.uk/studentrefdata/reference/countriesOfDomicile.xml
-xml.data.import.disabilities.url=https://swiss.adcom.ucl.ac.uk/studentrefdata/reference/disabilities.xml
-xml.data.import.ethnicities.url=https://swiss.adcom.ucl.ac.uk/studentrefdata/reference/ethnicities.xml
-xml.data.import.institutions.url=https://swiss.adcom.ucl.ac.uk/studentrefdata/reference/institutions.xml
-xml.data.import.nationalities.url=https://swiss.adcom.ucl.ac.uk/studentrefdata/reference/nationalities.xml
-xml.data.import.prismProgrammes.url=https://swiss.adcom.ucl.ac.uk/studentrefdata/reference/prism/prismProgrammes.xml
-xml.data.import.qualifications.url=https://swiss.adcom.ucl.ac.uk/studentrefdata/reference/qualifications.xml
-xml.data.import.sourcesOfInterest.url=https://swiss.adcom.ucl.ac.uk/studentrefdata/reference/sourcesOfInterest.xml
+xml.export.not.provided=Not provided
+xml.export.ip.not.provided=127.0.0.1
+xml.export.telephone.not.provided=+44 (0) 0000 000 000
+xml.export.other.provided=OTHER
+xml.export.refer.to.document=Refer to attached document.
+xml.export.source=PRISM
 
 xml.data.export.webservice.url=https://swiss.adcom.ucl.ac.uk:4443/registryws/
 xml.data.export.webservice.keystore=classpath:/keystodre/pgadmissions.jks
@@ -108,11 +94,13 @@ xml.data.export.sftp.folder=/u02/live/docs/prism
 # -----------------------------------------------------------------------------
 # SYSTEM STARTUP SETTINGS
 # -----------------------------------------------------------------------------
-
 system.name=PRiSM
 system.user.firstName=UCL
 system.user.lastName=PRiSM
 system.user.email=prism@ucl.ac.uk
+
+system.default.email.subject.directory=email/subject/
+system.default.email.content.directory=email/content/
 
 # -----------------------------------------------------------------------------
 # SERIALIZATION SETTINGS
