--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -1,7 +1,6 @@
 # =============================================================================
 # UCL Postgraduate Admissions (Local/Dev)
 # =============================================================================
-
 application.host=http://localhost:8080
 
 # -----------------------------------------------------------------------------
@@ -38,7 +37,6 @@ email.tobe=ked@zuhlke.com
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
-# The location where the indexes should be stored
 # -----------------------------------------------------------------------------
 hibernate.search.default.indexBase=C:/prismIndexes/
 
@@ -52,42 +50,32 @@ startup.institutionDomicile.import=false
 startup.advertCategory.import=false
 
 # -----------------------------------------------------------------------------
-# SYSTEM-DATA-IMPORT
+# SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
 import.institutionDomicile.location=xml/iso/iso_country_codes.xml
 import.advertCategory.location=xml/opportunityCategories/soc2010.csv
 
 # -----------------------------------------------------------------------------
-# SYSTEM-DATA-EXPORT
-# -----------------------------------------------------------------------------
-export.not.provided=Not provided
-export.ip.not.provided=127.0.0.1
-export.telephone.not.provided=+44 (0) 0000 000 000
-export.other.provided=OTHER
-export.refer.to.document=Refer to attached document.
-export.source=PRISM
-
-# -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
-maintenance.daily=0 0 1 * * *
 maintenance.ongoing=0 */1 * * * *
 
 # -----------------------------------------------------------------------------
-# PORTICO INTEGRATION SETTINGS
+# RESOURCE LIST DISPLAY SETTINGS
 # -----------------------------------------------------------------------------
-xml.data.import.user=reference
-xml.data.import.password=wiI2+sZm
-xml.data.import.prismProgrammes.user=prism
-xml.data.import.prismProgrammes.password=tCP5++Vm
-xml.data.import.country.url=reference_data/2014-05-08/countriesOfBirth.xml
-xml.data.import.domicile.url=reference_data/2014-05-08/countriesOfDomicile.xml
-xml.data.import.disability.url=reference_data/2014-05-08/disabilities.xml
-xml.data.import.ethnicity.url=reference_data/2014-05-08/ethnicities.xml
-xml.data.import.language.url=reference_data/2014-05-08/nationalities.xml
-xml.data.import.program.url=reference_data/2014-05-08/prismProgrammes.xml
-xml.data.import.qualification.url=reference_data/2014-05-08/qualifications.xml
-xml.data.import.sourceOfInterest.url=reference_data/2014-05-08/sourcesOfInterest.xml
+resource.list.sql.location
+resource.list.years.to.retrieve = 2
+resource.list.records.to.retrieve = 50
+
+# -----------------------------------------------------------------------------
+# EXPORT SETTINGS
+# -----------------------------------------------------------------------------
+xml.export.not.provided=Not provided
+xml.export.ip.not.provided=127.0.0.1
+xml.export.telephone.not.provided=+44 (0) 0000 000 000
+xml.export.other.provided=OTHER
+xml.export.refer.to.document=Refer to attached document.
+xml.export.source=PRISM
 
 xml.data.export.webservice.url=http://localhost:8088/mockService
 xml.data.export.webservice.keystorePassword=pgadmissions
@@ -104,7 +92,6 @@ xml.data.export.sftp.folder=
 # -----------------------------------------------------------------------------
 # SYSTEM STARTUP SETTINGS
 # -----------------------------------------------------------------------------
-
 system.name=PRiSM
 system.user.firstName=UCL
 system.user.lastName=PRiSM
@@ -116,5 +103,4 @@ system.default.email.content.directory=email/content/
 # -----------------------------------------------------------------------------
 # SERIALIZATION SETTINGS
 # -----------------------------------------------------------------------------
-
 json.pretty.print=true
