--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -1,7 +1,6 @@
 # =============================================================================
 # UCL Postgraduate Admissions (Local/Dev)
 # =============================================================================
-
 application.host=http://localhost:8080
 
 # -----------------------------------------------------------------------------
@@ -22,21 +21,21 @@ email.address.from=pgadmissions.jenkins@zuhlke.com
 email.address.to=uclprism@gmail.com
 
 # -----------------------------------------------------------------------------
-# HIBERNATE FULL TEXT SEARCH
-# -----------------------------------------------------------------------------
-hibernate.search.default.indexBase=C:/prismIndexes/
-
-# -----------------------------------------------------------------------------
 # INTEGRATION TESTING
 # -----------------------------------------------------------------------------
 integration.testing.clear.history=false
 
 # -----------------------------------------------------------------------------
-# START UP
+# HIBERNATE FULL TEXT SEARCH
+# -----------------------------------------------------------------------------
+hibernate.search.default.indexBase=C:/prismIndexes/
+
+# -----------------------------------------------------------------------------
+# START-UP
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
-startup.workflow.initialize=false
-startup.workflow.initialize.notifications=false
+startup.workflow.initialize=true
+startup.workflow.initialize.notifications=true
 startup.institutionDomicile.import=false
 startup.advertCategory.import=false
 
@@ -47,31 +46,32 @@ import.institutionDomicile.location=xml/iso/iso_country_codes.xml
 import.advertCategory.location=xml/opportunityCategories/soc2010.csv
 
 # -----------------------------------------------------------------------------
-# SYSTEM-DATA-EXPORT
+# SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
-export.not.provided=Not provided
-export.ip.not.provided=127.0.0.1
-export.telephone.not.provided=+44 (0) 0000 000 000
-export.other.provided=OTHER
-export.refer.to.document=Refer to attached document.
-export.source=PRISM
+maintenance.ongoing=0 */1 * * * *
 
 # -----------------------------------------------------------------------------
-# PORTICO INTEGRATION SETTINGS
+# RESOURCE LIST DISPLAY SETTINGS
 # -----------------------------------------------------------------------------
-xml.data.import.user=reference
-xml.data.import.password=wiI2+sZm
-xml.data.import.prismProgrammes.user=prism
-xml.data.import.prismProgrammes.password=tCP5++Vm
-xml.data.import.country.url=reference_data/2014-05-08/countriesOfBirth.xml
-xml.data.import.domicile.url=reference_data/2014-05-08/countriesOfDomicile.xml
-xml.data.import.disability.url=reference_data/2014-05-08/disabilities.xml
-xml.data.import.ethnicity.url=reference_data/2014-05-08/ethnicities.xml
-xml.data.import.language.url=reference_data/2014-05-08/nationalities.xml
-xml.data.import.program.url=reference_data/2014-05-08/prismProgrammes.xml
-xml.data.import.qualification.url=reference_data/2014-05-08/qualifications.xml
-xml.data.import.sourceOfInterest.url=reference_data/2014-05-08/sourcesOfInterest.xml
+resource.list.sql.location
+resource.list.years.to.retrieve = 2
+resource.list.records.to.retrieve = 50
 
+# -----------------------------------------------------------------------------
+# EXPORT SETTINGS
+# -----------------------------------------------------------------------------
+xml.export.not.provided=Not provided
+xml.export.ip.not.provided=127.0.0.1
+xml.export.telephone.not.provided=+44 (0) 0000 000 000
+xml.export.other.provided=OTHER
+xml.export.refer.to.document=Refer to attached document.
+xml.export.source=PRISM
+
+xml.data.export.webservice.url=http://localhost:8088/mockService
+xml.data.export.webservice.keystorePassword=pgadmissions
+xml.data.export.webservice.consecutiveSoapFaultsLimit=5
+
+xml.data.export.queue_pausing_delay_in_case_of_network_problem=15
 xml.data.export.sftp.host=192.168.11.115
 xml.data.export.sftp.port=22
 xml.data.export.sftp.username=pgadmin
@@ -82,7 +82,6 @@ xml.data.export.sftp.folder=
 # -----------------------------------------------------------------------------
 # SYSTEM STARTUP SETTINGS
 # -----------------------------------------------------------------------------
-
 system.name=PRiSM
 system.user.firstName=UCL
 system.user.lastName=PRiSM
@@ -94,5 +93,4 @@ system.default.email.content.directory=email/content/
 # -----------------------------------------------------------------------------
 # SERIALIZATION SETTINGS
 # -----------------------------------------------------------------------------
-
 json.pretty.print=true
