Added condition on expiry of action to resource list query ... mostly finished refactoring for notifications.

--- a/src/environments/environment.ci.properties
+++ b/src/environments/environment.ci.properties
@@ -20,22 +20,22 @@ db.maxPoolSize=20
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
 email.prod=false
-email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
+email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
+email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
 
-mail.smtp.auth=false
-mail.smtp.starttls.enable=false
-mail.smtp.quitwait=true
-mail.smtp.connectiontimeout=20000
-mail.smtp.timeout=20000
-mail.debug=true
-
-email.server=mx2.zuehlke.com
+email.server=localhost
 email.port=25
 email.username=
 email.password=
 email.address.from=pgadmissions.jenkins@zuhlke.com
 email.address.to=uclprism@gmail.com
-email.tobe=ked@zuhlke.com
+
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.smtp.quitwait=true
+mail.smtp.connectiontimeout=20000
+mail.smtp.timeout=20000
+mail.debug=true
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
@@ -65,9 +65,14 @@ maintenance.ongoing=0 */1 * * * *
 # -----------------------------------------------------------------------------
 # RESOURCE LIST DISPLAY SETTINGS
 # -----------------------------------------------------------------------------
-resource.list.sql.location
-resource.list.years.to.retrieve = 2
-resource.list.records.to.retrieve = 50
+resource.list.sql.location=/resource/console_list.ftl
+resource.list.years.to.retrieve=2
+resource.list.records.to.retrieve=50
+
+# -----------------------------------------------------------------------------
+# NOTIFICATION LIST SETTINGS
+# -----------------------------------------------------------------------------
+notification.list.sql.location=/notification/deferred_notification_list.ftl
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
