--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -20,6 +20,14 @@ db.maxPoolSize=20
 # -----------------------------------------------------------------------------
 email.prod=true
 email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
+email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
+
+email.server=localhost
+email.port=25
+email.username=
+email.password=
+email.address.from=pgadmissions.jenkins@zuhlke.com
+email.address.to=uclprism@gmail.com
 
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
@@ -27,14 +35,6 @@ mail.smtp.quitwait=true
 mail.smtp.connectiontimeout=20000
 mail.smtp.timeout=20000
 mail.debug=true
-
-email.server=smtp.cs.ucl.ac.uk
-email.port=25
-email.password=
-email.username=
-email.address.from=prism@ucl.ac.uk  
-email.address.to=prism@ucl.ac.uk
-email.tobe=prism@ucl.ac.uk
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
@@ -64,9 +64,14 @@ maintenance.ongoing=0 */1 * * * *
 # -----------------------------------------------------------------------------
 # RESOURCE LIST DISPLAY SETTINGS
 # -----------------------------------------------------------------------------
-resource.list.sql.location
-resource.list.years.to.retrieve = 2
-resource.list.records.to.retrieve = 50
+resource.list.sql.location=/resource/console_list.ftl
+resource.list.years.to.retrieve=2
+resource.list.records.to.retrieve=50
+
+# -----------------------------------------------------------------------------
+# NOTIFICATION LIST SETTINGS
+# -----------------------------------------------------------------------------
+notification.list.sql.location=/notification/deferred_notification_list.ftl
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
