--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -22,21 +22,21 @@ db.maxPoolSize=20
 # -----------------------------------------------------------------------------
 email.prod=false
 email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
+email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
+
+email.server=localhost
+email.port=25
+email.username=
+email.password=
+email.address.from=pgadmissions.jenkins@zuhlke.com
+email.address.to=uclprism@gmail.com
 
 mail.smtp.auth=true
-mail.smtp.starttls.enable=false
+mail.smtp.starttls.enable=true
 mail.smtp.quitwait=true
 mail.smtp.connectiontimeout=20000
 mail.smtp.timeout=20000
 mail.debug=true
-
-email.server=localhost
-email.port=25
-email.username=pgadmin
-email.password=pg@m1ss1on
-email.address.from=prism-dev@prism-dev.alumeni.co.uk
-email.address.to=uclprism@gmail.com
-email.tobe=ked@zuhlke.com
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
@@ -66,9 +66,14 @@ maintenance.ongoing=0 */1 * * * *
 # -----------------------------------------------------------------------------
 # RESOURCE LIST DISPLAY SETTINGS
 # -----------------------------------------------------------------------------
-resource.list.sql.location
-resource.list.years.to.retrieve = 2
-resource.list.records.to.retrieve = 50
+resource.list.sql.location=/resource/console_list.ftl
+resource.list.years.to.retrieve=2
+resource.list.records.to.retrieve=50
+
+# -----------------------------------------------------------------------------
+# NOTIFICATION LIST SETTINGS
+# -----------------------------------------------------------------------------
+notification.list.sql.location=/notification/deferred_notification_list.ftl
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
