--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -19,13 +19,7 @@ db.maxPoolSize=20
 # -----------------------------------------------------------------------------
 email.prod=false
 email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
-
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
-mail.smtp.quitwait=true
-mail.smtp.connectiontimeout=20000
-mail.smtp.timeout=20000
-mail.debug=true
+email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
 
 email.server=localhost
 email.port=25
@@ -33,7 +27,13 @@ email.username=
 email.password=
 email.address.from=pgadmissions.jenkins@zuhlke.com
 email.address.to=uclprism@gmail.com
-email.tobe=ked@zuhlke.com
+
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.smtp.quitwait=true
+mail.smtp.connectiontimeout=20000
+mail.smtp.timeout=20000
+mail.debug=true
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
@@ -63,9 +63,14 @@ maintenance.ongoing=0 */1 * * * *
 # -----------------------------------------------------------------------------
 # RESOURCE LIST DISPLAY SETTINGS
 # -----------------------------------------------------------------------------
-resource.list.sql.location
-resource.list.years.to.retrieve = 2
-resource.list.records.to.retrieve = 50
+resource.list.sql.location=/resource/console_list.ftl
+resource.list.years.to.retrieve=2
+resource.list.records.to.retrieve=50
+
+# -----------------------------------------------------------------------------
+# NOTIFICATION LIST SETTINGS
+# -----------------------------------------------------------------------------
+notification.list.sql.location=/notification/deferred_notification_list.ftl
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
