--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -53,9 +53,14 @@ maintenance.ongoing=0 */1 * * * *
 # -----------------------------------------------------------------------------
 # RESOURCE LIST DISPLAY SETTINGS
 # -----------------------------------------------------------------------------
-resource.list.sql.location
-resource.list.years.to.retrieve = 2
-resource.list.records.to.retrieve = 50
+resource.list.sql.location=/resource/console_list.ftl
+resource.list.years.to.retrieve=2
+resource.list.records.to.retrieve=50
+
+# -----------------------------------------------------------------------------
+# NOTIFICATION LIST SETTINGS
+# -----------------------------------------------------------------------------
+notification.list.sql.location=/notification/deferred_notification_list.ftl
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
