More work on notifications ...

--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -33,7 +33,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.hibernate.search.buildIndex=false
+startup.hibernate.search.buildIndex=true
 startup.workflow.initialize=true
 startup.workflow.initialize.notifications=true
 startup.institutionDomicile.import=false
