--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -46,9 +46,9 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.hibernate.search.buildIndex=false
-startup.workflow.initialize=true
-startup.workflow.initialize.notifications=true
+startup.hibernate.search.buildIndex=true
+startup.workflow.initialize=false
+startup.workflow.initialize.notifications=false
 startup.institutionDomicile.import=false
 startup.advertCategory.import=false
 
