--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -43,8 +43,8 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.hibernate.search.buildIndex=true
-startup.workflow.initialize=true
+startup.hibernate.search.buildIndex=false
+startup.workflow.initialize=false
 startup.workflow.initialize.notifications=true
 startup.institutionDomicile.import=false
 startup.advertCategory.import=false
