--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/spring/application-context.xml</param-value>
+        <param-value>classpath:/spring/application-context.xml</param-value>
     </context-param>
 
     <listener>
