--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -16,6 +16,7 @@ db.password=pgadmissions
 # -----------------------------------------------------------------------------
 email.prod=false
 email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
+email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
 
 email.address.from=pgadmissions.jenkins@zuhlke.com
 email.address.to=uclprism@gmail.com
@@ -33,9 +34,9 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.hibernate.search.buildIndex=true
-startup.workflow.initialize=true
-startup.workflow.initialize.notifications=true
+startup.hibernate.search.buildIndex=false
+startup.workflow.initialize=false
+startup.workflow.initialize.notifications=false
 startup.institutionDomicile.import=false
 startup.advertCategory.import=false
 
@@ -43,6 +44,7 @@ startup.advertCategory.import=false
 # SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
 import.institutionDomicile.location=xml/iso/iso_country_codes.xml
+import.currencies.location=xml/iso/iso_country_codes.xml
 import.advertCategory.location=xml/opportunityCategories/soc2010.csv
 
 # -----------------------------------------------------------------------------
