Work towards hacking export references / qualifications when they are not enough as required by ucl student record system.

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -71,6 +71,10 @@ resource.list.records.to.retrieve=50
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
 # -----------------------------------------------------------------------------
+
+xml.export.system.reference=Having considered the whole application including feedback from referees we are happy to make an appointment based upon the references available.
+xml.export.system.qualification=The applicant has experience equivalent to the typical academic entrance requirements for our program and therefore we wish to appoint them.
+
 xml.export.not.provided=Not provided
 xml.export.ip.not.provided=127.0.0.1
 xml.export.telephone.not.provided=+44 (0) 0000 000 000
