Changed schema name for sit

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -10,7 +10,7 @@ application.host=http://prism-dev.alumeni.co.uk
 # DATABASE SETTINGS
 # -----------------------------------------------------------------------------
 db.host=localhost
-db.schema=pgadmissions
+db.schema=pgadmissions_sit
 db.username=pgadmissions
 db.password=pgadmissions
 db.acquireIncrement=5
