Using data source  value for deployable environments

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -9,13 +9,7 @@ application.host=http://prism-dev.alumeni.co.uk
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
 # -----------------------------------------------------------------------------
-db.host=localhost
-db.schema=pgadmissions_sit
-db.username=pgadmissions
-db.password=pgadmissions
-db.acquireIncrement=5
-db.minPoolSize=5
-db.maxPoolSize=20
+data.source=java:jboss/datasources/pgadmissions_sit
 
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
