--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -7,13 +7,7 @@ application.host=http://prism.ucl.ac.uk
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
 # -----------------------------------------------------------------------------
-db.host=localhost:3306
-db.schema=pgadmissions
-db.username=pgadmissions
-db.password=pgadmissions
-db.acquireIncrement=5
-db.minPoolSize=5
-db.maxPoolSize=20
+data.source=java:jboss/datasources/pgadmissions
 
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
