--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -6,13 +6,7 @@ application.host=http://localhost:9000
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
 # -----------------------------------------------------------------------------
-db.host=localhost:3306
-db.schema=pgadmissions
-db.username=pgadmissions
-db.password=pgadmissions
-db.acquireIncrement=5
-db.minPoolSize=5
-db.maxPoolSize=20
+data.source=java:jboss/datasources/pgadmissions
 
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
