--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -35,7 +35,7 @@ mail.debug=true
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
 # -----------------------------------------------------------------------------
-hibernate.search.default.indexBase=C:/prismIndexes/
+hibernate.search.default.indexBase=/opt/bitnami/jboss/hibernateIndexes
 
 # -----------------------------------------------------------------------------
 # START-UP
