Simplified mail services, sit environment set up to send emails

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -22,8 +22,8 @@ email.server=localhost
 email.port=25
 email.username=
 email.password=
-email.address.from=pgadmissions.jenkins@zuhlke.com
-email.address.to=uclprism@gmail.com
+email.address.from=prism@prism-dev.alumeni.co.uk
+email.address.to=prism@localhost
 
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
