--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -16,12 +16,11 @@ email.prod=true
 email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
 email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
 
-email.server=localhost
+email.server=smtp.cs.ucl.ac.uk
 email.port=25
 email.username=
 email.password=
-email.address.from=pgadmissions.jenkins@zuhlke.com
-email.address.to=uclprism@gmail.com
+email.address.from=prism@ucl.ac.uk
 
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
