Adjusted email properties for sit

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -25,12 +25,12 @@ email.password=
 email.address.from=prism@prism-dev.alumeni.co.uk
 email.address.to=prism@localhost
 
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
+mail.smtp.auth=false
+mail.smtp.starttls.enable=false
 mail.smtp.quitwait=true
-mail.smtp.connectiontimeout=20000
-mail.smtp.timeout=20000
-mail.debug=true
+mail.smtp.connectiontimeout=2000
+mail.smtp.timeout=2000
+mail.debug=false
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
