--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -27,7 +27,7 @@ mail.smtp.starttls.enable=true
 mail.smtp.quitwait=true
 mail.smtp.connectiontimeout=20000
 mail.smtp.timeout=20000
-mail.debug=true
+mail.debug=false
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
