Sending email to jboss@localhost

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -23,7 +23,7 @@ email.port=25
 email.username=
 email.password=
 email.address.from=prism@prism-dev.alumeni.co.uk
-email.address.to=prism@localhost
+email.address.to=jboss@localhost
 
 mail.smtp.auth=false
 mail.smtp.starttls.enable=false
