--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -9,13 +9,7 @@ application.host=http://prism-dev.alumeni.co.uk
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
 # -----------------------------------------------------------------------------
-db.host=localhost
-db.schema=pgadmissions
-db.username=pgadmissions
-db.password=pgadmissions
-db.acquireIncrement=5
-db.minPoolSize=5
-db.maxPoolSize=20
+data.source=java:jboss/datasources/pgadmissions_sit
 
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
@@ -28,20 +22,20 @@ email.server=localhost
 email.port=25
 email.username=
 email.password=
-email.address.from=pgadmissions.jenkins@zuhlke.com
-email.address.to=uclprism@gmail.com
+email.address.from=prism@prism-dev.alumeni.co.uk
+email.address.to=jboss@localhost
 
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
+mail.smtp.auth=false
+mail.smtp.starttls.enable=false
 mail.smtp.quitwait=true
-mail.smtp.connectiontimeout=20000
-mail.smtp.timeout=20000
-mail.debug=true
+mail.smtp.connectiontimeout=2000
+mail.smtp.timeout=2000
+mail.debug=false
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
 # -----------------------------------------------------------------------------
-hibernate.search.default.indexBase=C:/prismIndexes/
+hibernate.search.default.indexBase=/opt/bitnami/jboss/hibernateIndexes
 
 # -----------------------------------------------------------------------------
 # START-UP
