--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -7,13 +7,7 @@ application.host=http://prism.ucl.ac.uk
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
 # -----------------------------------------------------------------------------
-db.host=localhost:3306
-db.schema=pgadmissions
-db.username=pgadmissions
-db.password=pgadmissions
-db.acquireIncrement=5
-db.minPoolSize=5
-db.maxPoolSize=20
+data.source=java:jboss/datasources/pgadmissions
 
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
@@ -22,19 +16,18 @@ email.prod=true
 email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
 email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
 
-email.server=localhost
+email.server=smtp.cs.ucl.ac.uk
 email.port=25
 email.username=
 email.password=
-email.address.from=pgadmissions.jenkins@zuhlke.com
-email.address.to=uclprism@gmail.com
+email.address.from=prism@ucl.ac.uk
 
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 mail.smtp.quitwait=true
 mail.smtp.connectiontimeout=20000
 mail.smtp.timeout=20000
-mail.debug=true
+mail.debug=false
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
