--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -1,25 +1,14 @@
-# =============================================================================
-# UCL Postgraduate Admissions (SIT)
-# http://c12545-2:8080/pgadmissions
-# http://pgadmissions-sit.zuehlke.com/pgadmissions
-# =============================================================================
-application.host=http://pgadmissions-sit.zuehlke.com
+application.host=http://prism-uat.alumeni.co.uk
 
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
 # -----------------------------------------------------------------------------
-db.host=localhost
-db.schema=pgadmissions_ci
-db.username=pgadmissions
-db.password=pgadmissions
-db.acquireIncrement=5
-db.minPoolSize=5
-db.maxPoolSize=20
+data.source=java:jboss/datasources/pgadmissions_uat
 
 # -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.prod=false
+email.prod=true
 email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
 email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
 
@@ -27,29 +16,29 @@ email.server=localhost
 email.port=25
 email.username=
 email.password=
-email.address.from=pgadmissions.jenkins@zuhlke.com
-email.address.to=uclprism@gmail.com
+email.address.from=prism@prism-uat.alumeni.co.uk
+email.address.to=jboss@localhost
 
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
+mail.smtp.auth=false
+mail.smtp.starttls.enable=false
 mail.smtp.quitwait=true
-mail.smtp.connectiontimeout=20000
-mail.smtp.timeout=20000
-mail.debug=true
+mail.smtp.connectiontimeout=2000
+mail.smtp.timeout=2000
+mail.debug=false
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
 # -----------------------------------------------------------------------------
-hibernate.search.default.indexBase=C:/prismIndexes/
+hibernate.search.default.indexBase=/opt/bitnami/jboss/hibernate-indexes-uat
 
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=true
-startup.workflow.initialize=false
-startup.workflow.initialize.notifications=false
-startup.institutionDomicile.import=false
-startup.advertCategory.import=false
+startup.workflow.initialize=true
+startup.workflow.initialize.notifications=true
+startup.institutionDomicile.import=true
+startup.advertCategory.import=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
