--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -39,9 +39,9 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=false
-startup.workflow.initialize.notifications=true
-startup.institutionDomicile.import=false
-startup.advertCategory.import=false
+startup.workflow.initialize.notifications=false
+startup.institutionDomicile.import=true
+startup.advertCategory.import=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
