Fixed issues in the state transition process.

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -6,9 +6,13 @@ application.host=http://prism-dev.alumeni.co.uk
 data.source=java:jboss/datasources/pgadmissions_sit
 
 # -----------------------------------------------------------------------------
+# CONTEXT
+# -----------------------------------------------------------------------------
+context.environment=sit
+
+# -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.prod=false
 email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
 email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
 
