--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -9,9 +9,13 @@ application.host=http://localhost:9000
 data.source=java:jboss/datasources/pgadmissions
 
 # -----------------------------------------------------------------------------
+# CONTEXT
+# -----------------------------------------------------------------------------
+context.environment=dev
+
+# -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.prod=false
 email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
 email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
 
