--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -6,9 +6,13 @@ application.host=http://prism.ucl.ac.uk
 data.source=java:jboss/datasources/pgadmissions
 
 # -----------------------------------------------------------------------------
+# CONTEXT
+# -----------------------------------------------------------------------------
+context.environment=prod
+
+# -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.prod=true
 email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
 email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
 
