--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -12,9 +12,13 @@ db.username=pgadmissions
 db.password=pgadmissions
 
 # -----------------------------------------------------------------------------
+# CONTEXT
+# -----------------------------------------------------------------------------
+context.environment=test
+
+# -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.prod=false
 email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
 email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
 
