First version of comment validation mechanism

--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -139,13 +139,13 @@ gender.FEMALE = Female
 gender.MALE = Male
 gender.INDETERMINATE_GENDER = Indeterminate Gender
 
-programType.MRES = MRes
-programType.MDRES = MD(Res)
-programType.MSC = MSc
-programType.RESEARCH_DEGREE = Research Degree
-programType.ENGINEERING_DOCTORATE = Engineering Doctorate
+programType.UNDERGRADUATE_STUDY = Undergraduate Study
+programType.POSTGRADUATE_STUDY = Postgraduate Study
+programType.POSTGRADUATE_RESEARCH = Postgraduate Research
 programType.INTERNSHIP = Internship
-programType.VISITING_RESEARCH = Research Visit
+programType.SECONDMENT = Secondment
+programType.EMPLOYMENT = Employment
+programType.CONTINUING_PROFESSIONAL_DEVELOPMENT = Continuing Professional Development
 programType.UNCLASSIFIED = Unclassified
 
 yesNoUnsureResponse.YES = Yes
