--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -6,9 +6,13 @@ application.host=http://prism-uat.alumeni.co.uk
 data.source=java:jboss/datasources/pgadmissions_uat
 
 # -----------------------------------------------------------------------------
+# CONTEXT
+# -----------------------------------------------------------------------------
+context.environment=uat
+
+# -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.prod=true
 email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
 email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
 
