More settings for UAT

--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -51,6 +51,11 @@ import.institutionDomicile.location=xml/iso/iso_country_codes.xml
 import.advertCategory.location=xml/opportunityCategories/soc2010.csv
 
 # -----------------------------------------------------------------------------
+# CUSTOM FORMS
+# -----------------------------------------------------------------------------
+custom.forms.xsd.location=xsd/scoring/configuration.xsd
+
+# -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
 maintenance.ongoing=0 */1 * * * *
