--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -62,9 +62,8 @@ maintenance.ongoing=0 */1 * * * *
 # -----------------------------------------------------------------------------
 # RESOURCE LIST DISPLAY SETTINGS
 # -----------------------------------------------------------------------------
-resource.list.sql.location=/resource/console_list.ftl
-resource.list.years.to.retrieve=2
 resource.list.records.to.retrieve=50
+resource.report.records.to.retrieve=1000
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
