--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -6,9 +6,13 @@ application.host=http://prism-uat.alumeni.co.uk
 data.source=java:jboss/datasources/pgadmissions_uat
 
 # -----------------------------------------------------------------------------
+# CONTEXT
+# -----------------------------------------------------------------------------
+context.environment=uat
+
+# -----------------------------------------------------------------------------
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
-email.prod=true
 email.sender=org.springframework.mail.javamail.JavaMailSenderImpl
 email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
 
@@ -45,6 +49,11 @@ startup.advertCategory.import=false
 # -----------------------------------------------------------------------------
 import.institutionDomicile.location=xml/iso/iso_country_codes.xml
 import.advertCategory.location=xml/opportunityCategories/soc2010.csv
+
+# -----------------------------------------------------------------------------
+# CUSTOM FORMS
+# -----------------------------------------------------------------------------
+custom.forms.xsd.location=xsd/scoring/configuration.xsd
 
 # -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
