Added currency import

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -44,13 +44,14 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=false
 startup.workflow.initialize.notifications=true
-startup.institutionDomicile.import=false
+startup.institutionDomicile.import=true
 startup.advertCategory.import=false
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
 import.institutionDomicile.location=xml/iso/isoCountryCode.xml
+import.countryCurrency.location=xml/iso/countryCurrency.csv
 import.advertCategory.location=xml/advertCategories/advertCategory.csv
 
 # -----------------------------------------------------------------------------
