--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -39,10 +39,10 @@ hibernate.search.default.indexBase=/opt/bitnami/jboss/hibernate-indexes-uat
 # START-UP
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=true
-startup.workflow.initialize=false
+startup.workflow.initialize=true
 startup.workflow.initialize.notifications=true
-startup.institutionDomicile.import=false
-startup.advertCategory.import=false
+startup.institutionDomicile.import=true
+startup.advertCategory.import=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
