Added study options to static resources

--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -152,6 +152,11 @@ yesNoUnsureResponse.YES = Yes
 yesNoUnsureResponse.NO = No
 yesNoUnsureResponse.UNSURE = Unsure
 
+studyOption.FULL_TIME = Full Time
+studyOption.PART_TIME = Part Time
+studyOption.MODULAR_FLEXIBLE = Modular / Flexible
+studyOption.UNCLASSIFIED = Unclassified
+
 applicationResidenceState.HOME = Home/EU
 applicationResidenceState.OVERSEAS = Overseas
 applicationResidenceState.UNSURE = Unsure
