--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -41,11 +41,11 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.hibernate.search.buildIndex=false
-startup.workflow.initialize=false
+startup.hibernate.search.buildIndex=true
+startup.workflow.initialize=true
 startup.workflow.initialize.notifications=true
 startup.institutionDomicile.import=true
-startup.advertCategory.import=false
+startup.advertCategory.import=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
