--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -48,6 +48,7 @@ startup.advertCategory.import=false
 # SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
 import.institutionDomicile.location=xml/iso/isoCountryCode.xml
+import.countryCurrency.location=xml/iso/countryCurrency.csv
 import.advertCategory.location=xml/advertCategories/advertCategory.csv
 
 # -----------------------------------------------------------------------------
