Generalised batch job management.

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -59,6 +59,7 @@ custom.forms.xsd.location=xsd/scoring/configuration.xsd
 # SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
 maintenance.ongoing=0 */1 * * * *
+maintenance.shutdown.timeout=5000
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
