--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -60,6 +60,7 @@ custom.forms.xsd.location=xsd/scoring/configuration.xsd
 # SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
 maintenance.ongoing=0 */1 * * * *
+maintenance.shutdown.timeout=5000
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
