--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -63,6 +63,7 @@ custom.forms.xsd.location=xsd/scoring/configuration.xsd
 # SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
 maintenance.ongoing=0 */1 * * * *
+maintenance.shutdown.timeout=5000
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
