Finished fixing issues with start up and scheduled maintenance.

--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -38,11 +38,10 @@ hibernate.search.default.indexBase=/opt/bitnami/jboss/hibernate-indexes-uat
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.hibernate.search.buildIndex=true
 startup.workflow.initialize=true
 startup.workflow.initialize.notifications=true
-startup.institutionDomicile.import=true
-startup.advertCategory.import=true
+startup.import.system.data=true
+startup.hibernate.search.initialize=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
@@ -55,12 +54,6 @@ import.advertCategory.location=xml/advertCategories/advertCategory.csv
 # CUSTOM FORMS
 # -----------------------------------------------------------------------------
 custom.forms.xsd.location=xsd/scoring/configuration.xsd
-
-# -----------------------------------------------------------------------------
-# SCHEDULERS & TIMINGS
-# -----------------------------------------------------------------------------
-maintenance.ongoing=0 */1 * * * *
-maintenance.shutdown.timeout=5000
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
