--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -37,11 +37,10 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.hibernate.search.buildIndex=true
 startup.workflow.initialize=true
-startup.workflow.initialize.notifications=false
-startup.institutionDomicile.import=false
-startup.advertCategory.import=false
+startup.workflow.initialize.notifications=true
+startup.import.system.data=true
+startup.hibernate.search.initialize=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
@@ -54,12 +53,6 @@ import.advertCategory.location=xml/advertCategories/advertCategory.csv
 # CUSTOM FORMS
 # -----------------------------------------------------------------------------
 custom.forms.xsd.location=xsd/scoring/configuration.xsd
-
-# -----------------------------------------------------------------------------
-# SCHEDULERS & TIMINGS
-# -----------------------------------------------------------------------------
-maintenance.ongoing=0 */1 * * * *
-maintenance.shutdown.timeout=5000
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
