--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -41,11 +41,10 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.hibernate.search.buildIndex=true
 startup.workflow.initialize=true
 startup.workflow.initialize.notifications=true
-startup.institutionDomicile.import=true
-startup.advertCategory.import=true
+startup.import.system.data=true
+startup.hibernate.search.initialize=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
@@ -58,12 +57,6 @@ import.advertCategory.location=xml/advertCategories/advertCategory.csv
 # CUSTOM FORMS
 # -----------------------------------------------------------------------------
 custom.forms.xsd.location=xsd/scoring/configuration.xsd
-
-# -----------------------------------------------------------------------------
-# SCHEDULERS & TIMINGS
-# -----------------------------------------------------------------------------
-maintenance.ongoing=0 */1 * * * *
-maintenance.shutdown.timeout=5000
 
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
