--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -38,11 +38,10 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=false
 startup.workflow.initialize.notifications=false
-startup.institutionDomicile.import=false
-startup.advertCategory.import=false
+startup.import.system.data=false
+startup.hibernate.search.initialize=false
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
@@ -60,6 +59,7 @@ custom.forms.xsd.location=xsd/scoring/configuration.xsd
 # SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
 maintenance.ongoing=0 */1 * * * *
+maintenance.reaper.ongoing=*/1 * * * * *
 maintenance.shutdown.timeout=5000
 
 # -----------------------------------------------------------------------------
