Multiple fixes to getting application list

--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -147,6 +147,7 @@ programType.SECONDMENT = Secondment
 programType.EMPLOYMENT = Employment
 programType.CONTINUING_PROFESSIONAL_DEVELOPMENT = Continuing Professional Development
 programType.UNCLASSIFIED = Unclassified
+programType.STUDY_SCHOLARSHIP = Study Scholarship
 
 yesNoUnsureResponse.YES = Yes
 yesNoUnsureResponse.NO = No
