Fixed several server problems, clean-up

--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -23,6 +23,7 @@ action.APPLICATION_PROVIDE_INTERVIEW_AVAILABILITY = Provide Interview Availabili
 action.APPLICATION_PROVIDE_INTERVIEW_FEEDBACK = Provide Interview Feedback
 action.APPLICATION_PROVIDE_REFERENCE = Provide Reference
 action.APPLICATION_PROVIDE_REVIEW = Provide Review
+action.APPLICATION_PURGE = Purge
 action.APPLICATION_TERMINATE = Terminate
 action.APPLICATION_UPDATE_INTERVIEW_AVAILABILITY = Update Interview Availability
 action.APPLICATION_VIEW_AS_CREATOR = View As Creator
