--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -41,7 +41,7 @@ hibernate.search.default.indexBase=/opt/bitnami/jboss/hibernate-indexes-sit
 startup.workflow.initialize=false
 startup.workflow.initialize.notifications=true
 startup.import.system.data=false
-startup.hibernate.search.initialize=false
+startup.hibernate.search.initialize=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
