Fixed performance issues in resource list.

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -43,6 +43,11 @@ startup.import.system.data=true
 startup.hibernate.search.initialize=true
 
 # -----------------------------------------------------------------------------
+# MAINTENANCE
+# -----------------------------------------------------------------------------
+maintenance.run=true
+
+# -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
 import.institutionDomicile.location=xml/iso/isoCountryCode.xml
