--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -44,6 +44,11 @@ startup.import.system.data=false
 startup.hibernate.search.initialize=true
 
 # -----------------------------------------------------------------------------
+# MAINTENANCE
+# -----------------------------------------------------------------------------
+maintenance.run=true
+
+# -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
 import.institutionDomicile.location=xml/iso/isoCountryCode.xml
