--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -42,9 +42,14 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # START-UP
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=false
-startup.workflow.initialize.notifications=true
+startup.workflow.initialize.notifications=false
 startup.import.system.data=false
 startup.hibernate.search.initialize=false
+
+# -----------------------------------------------------------------------------
+# MAINTENANCE
+# -----------------------------------------------------------------------------
+maintenance.run=false
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
