--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -44,6 +44,11 @@ startup.import.system.data=false
 startup.hibernate.search.initialize=false
 
 # -----------------------------------------------------------------------------
+# MAINTENANCE
+# -----------------------------------------------------------------------------
+maintenance.run=false
+
+# -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
 import.institutionDomicile.location=xml/iso/isoCountryCode.xml
