--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -56,7 +56,6 @@ maintenance.run=false
 # -----------------------------------------------------------------------------
 import.institutionDomicile.location=xml/iso/isoCountryCode.xml
 import.countryCurrency.location=xml/iso/countryCurrency.csv
-import.advertCategory.location=xml/advertCategories/advertCategory.csv
 
 # -----------------------------------------------------------------------------
 # CUSTOM FORMS
@@ -66,6 +65,8 @@ custom.forms.xsd.location=xsd/scoring/configuration.xsd
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
 # -----------------------------------------------------------------------------
+xml.export.exporter=com.zuehlke.pgadmissions.services.ApplicationExportServiceDevelopment
+
 xml.export.system.reference=Having considered the whole application, including both written and spoken feedback from referees, we are happy to make an appointment based upon the information available to us.
 xml.export.system.qualification=We consider that the applicant has experience equivalent to the typical academic entrance requirements for our program. It is therefore our recommendation that an appointment be made.
 
