--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -101,3 +101,12 @@ system.default.email.content.directory=email/content/
 # SERIALIZATION SETTINGS
 # -----------------------------------------------------------------------------
 json.pretty.print=true
+
+# -----------------------------------------------------------------------------
+# INTEGRATIONS
+# -----------------------------------------------------------------------------
+integration.google.geocoding.code.import.data=false
+integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
+integration.google.geocoding.api.key=AIzaSyBs0D7C2wzrK3vL1tl5nZ8Vm3PvnvdrkYM
+integration.google.geocoding.api.day.batch.limit=500
+integration.google.geocoding.api.request.delay.ms=100
