--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -113,3 +113,7 @@ integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocod
 integration.google.geocoding.api.key=AIzaSyBs0D7C2wzrK3vL1tl5nZ8Vm3PvnvdrkYM
 integration.google.geocoding.api.day.batch.limit=250
 integration.google.geocoding.api.request.delay.ms=100
+
+integration.yahoo.exchange.rate.api.uri=https://query.yahooapis.com/v1/public/yql
+integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithkeys
+integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
