--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -108,5 +108,9 @@ json.pretty.print=true
 integration.google.geocoding.code.import.data=false
 integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
 integration.google.geocoding.api.key=AIzaSyBs0D7C2wzrK3vL1tl5nZ8Vm3PvnvdrkYM
-integration.google.geocoding.api.day.batch.limit=500
+integration.google.geocoding.api.day.batch.limit=250
 integration.google.geocoding.api.request.delay.ms=100
+
+integration.yahoo.exchange.rate.api.uri=https://query.yahooapis.com/v1/public/yql
+integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithkeys
+integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
